--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,12 +8,14 @@ decorator==4.3.0
 defusedxml==0.5.0
 Django==2.1.4
 django-allauth==0.38.0
+django-celery-beat==1.4.0
 django-celery-results==1.0.4
 django-des==2.4.1
 django-extensions==2.1.4
 django-filter==2.0.0
 django-rest-auth==0.9.3
 django-solo==1.1.3
+django-timezone-field==3.0
 djangorestframework==3.9.0
 djangorestframework-jwt==1.11.0
 djmail==1.1.0
@@ -35,6 +37,8 @@ ptyprocess==0.6.0
 Pygments==2.3.0
 pygraphviz==1.5
 PyJWT==1.7.1
+python-crontab==2.3.5
+python-dateutil==2.7.5
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.21.0
