--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,7 @@ pexpect==4.6.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.7
 psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
 ptyprocess==0.6.0
 Pygments==2.3.0
 pygraphviz==1.5
