Configure deploy on server and automatic ssl letsencrypt

--- a/.env
+++ b/.env
@@ -11,14 +11,15 @@ DB_HOST=db
 DB_PORT=5432
 
 # Config environment type (choices:  ['local', 'stage', 'prod', 'test']
-ENVIRONMENT=local
+ENVIRONMENT=stage
 
 DJANGO_DEBUG=False
 
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=qwerty
 
-HOST_NAME=boilerplate.com
+HOST_NAME=mjroson.tk
 SUBDOMAIN=www
 
 PROJ_NAME=boilerplate
+IMG_VERSION=initial
