--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -1,5 +1,17 @@
 server {
     listen 80;
+    server_name ${SUBDOMAIN}.${HOST_NAME};
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
     listen 443 ssl http2;
 
     server_name ${SUBDOMAIN}.${HOST_NAME};
@@ -24,8 +36,6 @@ server {
     location /media/ {
         alias   /opt/app/media/;
     }
-
-
 
     location /{
         proxy_connect_timeout 5000s;
