--- a/nginx/conf/site.conf
+++ b/nginx/conf/site.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ${SUBDOMAIN}.${HOST_NAME};
+    server_name .${HOST_NAME} ${SUBDOMAIN}.${HOST_NAME};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -14,17 +14,15 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name ${SUBDOMAIN}.${HOST_NAME};
+    server_name .${HOST_NAME} ${SUBDOMAIN}.${HOST_NAME};
 
     client_max_body_size 4G;
     chunked_transfer_encoding       off;
 
-    ssl_certificate     /etc/nginx/certs/live/${SUBDOMAIN}.${HOST_NAME}/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/live/${SUBDOMAIN}.${HOST_NAME}/privkey.pem;
-
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
-    ssl_prefer_server_ciphers on;
+    ssl_certificate     /etc/letsencrypt/live/${HOST_NAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${HOST_NAME}/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     access_log /tmp/logs/nginx-access.log;
     error_log /tmp/logs/nginx-error.log;
