Added config environments

--- a/local.env
+++ b/local.env
@@ -1,6 +1,6 @@
-# Add Environment Variables
+# Environment local variables
 
-SECRET_KEY=t.FIdc*3Y|903~y0*_#E7?fLpDFm:-n%e-lRVqJfBQg=PB0cmC^9b6-LKlu533af
+SECRET_KEY=<secret_key>
 
 # Config DB
 DB_ENGINE=django.db.backends.postgresql_psycopg2
@@ -18,8 +18,8 @@ DJANGO_DEBUG=True
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=qwerty
 
-HOST_NAME=mjroson.tk
-SUBDOMAIN=www
+PROJ_NAME=<project_name>
 
-PROJ_NAME=boilerplate
+# Docker image tag
 IMG_VERSION=latest
+
