--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,8 @@ services:
       - ./backend:/usr/src/app
     expose:
       - "8000"
+    ports:
+      - "8000:8000"
     depends_on:
       - db
     networks:
