--- a/local.env
+++ b/local.env
@@ -23,3 +23,7 @@ PROJ_NAME=<project_name>
 # Docker image tag
 IMG_VERSION=latest
 
+# Config scheduler manager task (choices: ['static', 'dynamic'])
+# 'dynamic': use http://docs.celeryproject.org/en/latest/userguide/periodic-tasks.html#using-custom-scheduler-classes
+# 'static': use CELERYBEAT_SCHEDULE constant in django settings
+SCHEDULER_MANAGER=static
