Bug fixed generate ssl certificate

--- a/prod.env
+++ b/prod.env
@@ -20,6 +20,7 @@ RABBITMQ_DEFAULT_PASS=<rabbitmq_pass>
 
 HOST_NAME=mjroson.tk
 SUBDOMAIN=www
+EMAIL_SSL=<youremail@mail.com>
 
 PROJ_NAME=<project_name>
 
