--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -11,6 +11,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
+    "ramda": "^0.26.1",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.9.0",
