--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "use-query-params": "^0.3.4"
   },
