--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.2.5",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
