--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -34,6 +34,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -59,7 +64,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^4.2.5",
     "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
