--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -67,6 +67,7 @@
     "husky": "^4.2.5",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.1",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable-state-invariant": "^2.1.0"
   }
 }
