--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@reduxjs/toolkit": "^1.2.5",
-    "antd": "^3.23.2",
+    "antd": "^4.1.5",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
