Remove frontend and deploy scripts and update python dependencies

--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-# Environment local variables
+# Environment dev variables
 
 SECRET_KEY=<secret_key>
 
@@ -10,8 +10,8 @@ DB_PASS=qwerty123
 DB_HOST=db
 DB_PORT=5432
 
-# Config environment type (choices:  ['local', 'stage', 'prod', 'test']
-ENVIRONMENT=local
+# Config environment type (choices:  ['dev', 'prod', 'test']
+ENVIRONMENT=dev
 
 DJANGO_DEBUG=True
 
@@ -22,6 +22,8 @@ PROJ_NAME=<project_name>
 
 # Docker image tag
 IMG_VERSION=latest
+
+ADMIN_EMAIL=email@mail.com
 
 # Config scheduler manager task (choices: ['static', 'dynamic'])
 # 'dynamic': use http://docs.celeryproject.org/en/latest/userguide/periodic-tasks.html#using-custom-scheduler-classes
