Implement swagger on API

--- a/dev.env
+++ b/dev.env
@@ -14,6 +14,7 @@ DB_PORT=5432
 ENVIRONMENT=dev
 
 DJANGO_DEBUG=True
+DJANGO_ALLOWED_HOSTS=localhost,localhost:8000,127.0.0.1
 
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=qwerty
